# MediaRefinery

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml  frontend.yml
docs/adr/: ADR-0010-v2-service-architecture.md
docs/models/: catalog.json
docs/v2/: immich-api-compat.md  operations.md  threat-model.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
planning/: dependency-map.md
src/mediarefinery/: __init__.py  actions.py  classifier.py  cli.py  config.py  decision.py  doctor.py  extractor.py  immich.py  observability.py  onnx_backend.py  pipeline.py  reporter.py  scanner.py  state.py
templates/: config.example.yml  config.immich-smoke.example.yml  config.preset.sensitive.example.yml  docker-compose.example.yml  env.example  env.smoke.example  issue-template.md  pr-template.md
tests/: test_actions.py  test_classifier.py  test_cli.py  test_config.py  test_decision.py  test_doctor.py  test_extractor.py  test_immich.py  test_locked_folder.py  test_reporter.py  test_scan_privacy.py  test_scanner.py  test_state.py
tests/fixtures/: config.custom-taxonomy.yml
tests/service/: test_account_purge.py  test_auth_proxy.py  test_bootstrap_and_reclassify.py  test_classifier_cache.py  test_demo_fixtures.py  test_demo_mode.py  test_locked_folder_unlock.py  (+10 more)
(+25 files in other folders)
